All_Component_DX/force-app/main/default/objects/Down_Time__c/fields/Reason_Code_del__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_del__c</fullName>
    <label>Reason Code (Do Not Use)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Failures</fullName>
            </value>
            <value>
                <fullName>Tooling Damage</fullName>
            </value>
            <value>
                <fullName>Unplanned Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>