All_Component_DX/force-app/main/default/objects/Down_Time__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <description>This object holds the reference to the Work Order object for which the down-time of the product is recorded</description>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Down Times</relationshipLabel>
    <relationshipName>Down_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>